--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rick-and-morty-app",
-  "version": "0.1.0",
+  "name": "business-intelligence-dashboard",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -9,13 +9,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-router-dom": "^6.8.0",
+    "axios": "^1.3.0",
+    "chart.js": "^4.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "styled-components": "^5.3.6",
+    "react-icons": "^4.7.1",
+    "date-fns": "^2.29.3",
+    "react-loading-skeleton": "^3.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && echo 'Ready for deployment'"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +43,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "keywords": [
+    "react",
+    "dashboard",
+    "business-intelligence",
+    "data-visualization",
+    "api-integration",
+    "responsive-design"
+  ],
+  "description": "A comprehensive business intelligence dashboard built with React, featuring real-time data visualization, user management, and weather analytics.",
+  "author": "Professional Developer",
+  "license": "MIT"
 }
