--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-router-dom": "^6.8.0",
     "axios": "^1.3.0",
     "chart.js": "^4.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "styled-components": "^5.3.6",
-    "react-icons": "^4.7.1",
     "date-fns": "^2.29.3",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.1",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
